--- a/app/views/learn/learnaward.html
+++ b/app/views/learn/learnaward.html
@@ -9,48 +9,41 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptUser" translate="Login.User">User:</label>
 			<div class="col-sm-10">
-				<ui-select ng-model="SelectedUser.selected" theme="select2"  search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-			    	<ui-select-match placeholder="{{'Common.Search' | translate}}">{{$select.selected.text}}</ui-select-match>
-			    	<ui-select-choices repeat="usrid in UserIDs">
-			      		<div ng-bind-html="usrid.text | highlight: $select.search"></div>
-			      		<small>
-			      			{{'Common.ID' | translate}}: {{usrid.id}}
-			        		{{'Common.Name' | translate}}: <span ng-bind-html="''+usrid.text | highlight: $select.search"></span>
-			      		</small>
-			    	</ui-select-choices>
-				</ui-select>		 	
+				<select id="iptUser" ng-model="CurrentLearnAward.UserID" ng-disabled="ActivityID == 3"
+					ng-options="usr.UserID as usr.DisplayAs for usr in arUserList">
+				</select>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptDate" translate="Common.Date">Date</label>
-			<div class="input-group col-sm-10">
-            	<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="AwardDate" is-open="isDateOpened"            		
-            		datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate }}" />
-              	<span class="input-group-btn">
-                	<button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-              	</span>
-            </div>
+			<div class="col-sm-10">
+				<div class="input-group">
+					<input type="text" datepicker-popup="{{DateFormat}}" ng-model="CurrentLearnAward.AwardDate" is-open="isDateOpened"
+							datepicker-options="dateOptions" ng-required="true" ng-readonly="ActivityID == 3" close-text="{{'Common.Close' | translate }}" />
+					<button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>					
+				</div>
+			</div>
 		</div>
 		
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptScore" translate="Learn.Score">Score</label>
 			<div class="col-sm-10">
-				<input type="text" id="iptScore" ng-readonly="isReadonly" ng-model="Score"></input>
+				<input type="text" class="form-control" ng-readonly="ActivityID == 3" ng-model="CurrentLearnAward.Score"></input>
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptReason" translate="Learn.Reason">Reason</label>
 			<div class="col-sm-10">
-				<textarea rows="5" id="iptReason" ng-readonly="isReadonly" cols="50"
-					ng-model="Reason"></textarea>
+				<input rows="5" id="iptReason" ng-readonly="ActivityID == 3" class="form-control" 
+					ng-model="CurrentLearnAward.Reason" />
 			</div>
 		</div>
 
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
-				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
+				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="ActivityID == 3"
 					ng-disabled="frmObj.$invalid || !frmObj.$dirty" translate="Common.Submit">Submit</button>
 				<button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
 			</div>
