--- a/app/views/learn/learnhistory.html
+++ b/app/views/learn/learnhistory.html
@@ -9,7 +9,7 @@
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptUser" translate="Login.User">User:</label>
 			<div class="col-sm-10">
-				<select id="iptUser" ng-model="CurrentLearnHistory.UserID" ng-disabled="isReadonly"
+				<select id="iptUser" ng-model="CurrentLearnHistory.UserID" ng-disabled="ActivityID != 1"
 					ng-options="usr.UserID as usr.DisplayAs for usr in arUserList">
 					<!-- Example 1:  color.name group by color.shade disable when color.notAnOption for color in colors
       					  Example 2: usertype.value as usertype.text for usertype in userTypes 
@@ -23,25 +23,25 @@
 			<div class="col-sm-10">
                 <selectize placeholder='Select a learn object...' options='arLearnObject' 
 						config="learnobjectConfig" ng-model="CurrentLearnHistory.ObjectID"
-                    	ng-disabled="isReadonly" required="required"></selectize>
+                    	ng-disabled="ActivityID != 1" required="required"></selectize>
  			</div>
 		</div>
 		
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptDate" translate="Common.Date">Date</label>
-			<div class="input-group col-sm-10">
-            	<input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="CurrentLearnHistory.LearnDate" is-open="isDateOpened"            		
-            			datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="{{'Common.Close' | translate}}" />
-              	<span class="input-group-btn">
-                	<button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-              	</span>
-            </div>
+			<div class="col-sm-10">
+				<div class="input-group">
+					<input type="text" datepicker-popup="{{DateFormat}}" ng-model="CurrentLearnHistory.LearnDate" is-open="isDateOpened"
+							datepicker-options="dateOptions" ng-required="true" ng-readonly="ActivityID != 1" close-text="{{'Common.Close' | translate }}" />
+					<button type="button" class="btn btn-default" ng-click="openDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>					
+				</div>
+			</div>
 		</div>
 		
 		<div class="form-group">
 			<label class="control-label col-sm-2" for="iptComment" translate="Common.Comment">Comment</label>
 			<div class="col-sm-10">
-				<input type="text" ng-readonly="isReadonly" ng-model="CurrentLearnHistory.Comment">
+				<input type="text" class="form-control" ng-readonly="ActivityID == 3" ng-model="CurrentLearnHistory.Comment">
 			</div>
 		</div>
 
