--- a/app/views/finance/financedocument.html
+++ b/app/views/finance/financedocument.html
@@ -133,14 +133,14 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="iptItemAmt" translate="Finance.Amount">Amount:</label>
                     <div class="col-sm-10">
-                        <input type="text" id="iptItemAmt" ng-readonly="isReadonly" ng-model="SelectedDocumentItem.TranAmount_Org" required="required"></input>
+                        <input type="text" id="iptItemAmt" ng-readonly="isReadonly" class="form-control" ng-model="SelectedDocumentItem.TranAmount_Org" required="required"></input>
                     </div>
                 </div>
                 
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="iptItemDesp" translate="Common.Description">Desp: </label>
                     <div class="col-sm-10">
-                        <input type="text" id="iptItemDesp" ng-readonly="isReadonly" ng-model="SelectedDocumentItem.Desp" required="required"></input>
+                        <input type="text" id="iptItemDesp" ng-readonly="isReadonly" class="form-control" ng-model="SelectedDocumentItem.Desp" required="required"></input>
 			        </div>
 		        </div>
 
