--- a/app/views/finance/financecc.html
+++ b/app/views/finance/financecc.html
@@ -32,16 +32,9 @@
 	    <div class="form-group">
         	<label class="control-label col-sm-2" translate="Common.Parent">Parent</label>
             <div class="col-sm-10">
-                <ui-select ng-model="ControlCenterObject.ParentObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                	<ui-select-match placeholder="Select a parent via the name...">{{$select.selected.Name}}</ui-select-match>
-                    <ui-select-choices repeat="allcc in AllControlCenters">
-                        <div ng-bind-html="allcc.Name | highlight: $select.search"></div>
-                        <small>
-                            {{'Common.ID' | translate}}: {{allcc.ID}} <br />
-                            {{'Common.Name' | translate}}: <span ng-bind-html="''+allcc.Name | highlight: $select.search"></span>
-                        </small>
-                    </ui-select-choices>
-                </ui-select>
+                <selectize placeholder='Select a control center...' options='arFinanceControlCenter' 
+                           config="ccConfig" ng-model="ControlCenterObject.ParentID"
+                           ng-disabled="isReadonly" required="required"></selectize>
              </div>
          </div>
 		
