--- a/app/views/finance/financecc.html
+++ b/app/views/finance/financecc.html
@@ -32,17 +32,18 @@
 	    <div class="form-group">
         	<label class="control-label col-sm-2" translate="Common.Parent">Parent</label>
             <div class="col-sm-10">
-                <selectize placeholder='Select a control center...' options='arFinanceControlCenter' 
-                           config="ccConfig" ng-model="ControlCenterObject.ParentID"
-                           ng-disabled="isReadonly" required="required"></selectize>
+                <selectize  
+						options='arFinanceControlCenter' 
+                        config="ccConfig" ng-model="ControlCenterObject.ParentID"
+                        ng-disabled="isReadonly"></selectize>
              </div>
          </div>
 		
 		<div class="form-group">
-			<label class="control-label col-sm-2" for="iptContent" translate="Common.Comment">Comment</label>
+			<label class="control-label col-sm-2" for="iptComment" translate="Common.Comment">Comment</label>
 			<div class="col-sm-10">
-				<textarea rows="5" ng-readonly="isReadonly" id="iptContent"
-						ng-model="ControlCenterObject.Comment"></textarea>
+				<input ng-readonly="isReadonly" id="iptComment" class="form-control"  placeholder="{{'Common.Comment' | translate}}"
+						ng-model="ControlCenterObject.Comment" />
 			</div>
 		</div>
 
@@ -50,7 +51,7 @@
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
 					ng-disabled="frmObj.$invalid || !frmObj.$dirty" translate="Common.Submit">Submit</button>
-				<button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
+				<button class="btn btn-danger" ng-click="close()" translate="Common.BackToList">Cancel</button>
 			</div>
 		</div>
 	</form>
