--- a/app/views/finance/financeorder.html
+++ b/app/views/finance/financeorder.html
@@ -78,8 +78,54 @@
 
     <!-- Rules -->
     <div class="container" ng-show="!showhdr">
-    	<div id="gridOrderSRules" ui-grid="gridOptions" ui-grid-resize-columns
-		 	 style="width: 100%; height: 500px;"></div>
+        <table st-table="RuleObjects" class="table">
+            <thead>
+                <tr>
+                    <th st-sort="ruleid" translate="Finance.ItemID">ID</th>
+                    <th st-sort="ccid" translate="Finance.ControlCenter">CC ID</th>
+                    <th st-sort="ccname" translate="Finance.ControlCenter">CC Name</th>
+                    <th st-sort="precent" translate="Common.Precent">Precentage</th>
+                    <th st-sort="cmt" translate="Common.Comment">Comment</th>
+                    <th translate="Common.Operations">Operations</th>
+                </tr>
+                <tr>
+                    <th colspan="6"><input st-search="serch" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text"/></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="row in RuleObjects">
+                    <td>{{row.RuleID}}</td>
+                    <td>{{row.ControlCenterID}}</td>
+                    <td>{{row.ControlCenterObject.Name}}</td>
+                    <td>{{row.Precentage}}</td>
+                    <td>{{row.Comment}}</td>
+                    <td>
+                        <button type="button" class="btn btn-sm" ng-click="displayItem(row)" tooltip="{{'Common.Display' | translate}}">
+                            <i class="glyphicon glyphicon-share">
+                            </i>
+                        </button>
+                        <button type="button" class="btn btn-sm" ng-click="editItem(row)" tooltip="{{'Common.Edit' | translate}}">
+                            <i class="glyphicon glyphicon-edit">
+                            </i>
+                        </button>
+                        <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger" tooltip="{{'Common.Delete' | translate}}">
+                            <i class="glyphicon glyphicon-remove-circle">
+                            </i>
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3">
+                        <cst-count></cst-count>
+                    </td>
+                    <td colspan="3">
+                        <cst-sum columnname="Precentage"></cst-sum>
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
 
         <!-- Item Detail -->
         <div class="panel panel-default" style="margin: 30px, 10px;">
@@ -119,8 +165,8 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="iptRuleComment">Comment: </label>
                     <div class="col-sm-10">
-                        <textarea rows="5" id="iptRuleComment" ng-readonly="isReadonly" cols="50"
-                                  ng-model="SelectedRuleObject.Comment"></textarea>
+                        <input id="iptRuleComment" ng-readonly="isReadonly"
+                               ng-model="SelectedRuleObject.Comment"></input>
 			        </div>
 		        </div>
 
