--- a/app/views/finance/financeorderlist.html
+++ b/app/views/finance/financeorderlist.html
@@ -6,20 +6,21 @@
 		
 		<div class="btn-toolbar" role="toolbar" aria-label="...">
 		  <div class="btn-group" role="group" aria-label="...">
-			<button type="button" class="btn-group btn-primary" ng-click="newItem()" translate="Common.New">New</button>
+			<button type="button" class="btn-group btn-primary" ng-click="newItem()" 
+				tooltip="{{'Common.New' | translate}}" translate="Common.New">New</button>
 			<button type="button" class="btn-group btn-primary" ng-click="refreshList()" translate="Common.Refresh">Refresh</button>
 		  </div>
 		  
 		  <div class="btn-group" role="group" aria-label="...">
-  			<button type="button" ng-click="displayItem()" ng-disabled="selectedRows.length <= 0"
+  			<button type="button" ng-click="displayItem()" 
 					class="btn-group btn-primary" tooltip="{{'Common.Display' | translate}}"
 					translate="Common.Display">					
 			</button>
-			<button type="button" ng-click="editItem()" ng-disabled="selectedRows.length <= 0"
+			<button type="button" ng-click="editItem()" 
 					class="btn-group btn-warning" tooltip="{{'Common.Edit' | translate}}"
 					translate="Common.Edit">
 			</button>
-			<button type="button" ng-click="removeItem()" ng-disabled="selectedRows.length <= 0"
+			<button type="button" ng-click="removeItem()" 
 					class="btn-group btn-danger" tooltip="{{'Common.Delete' | translate}}"
 					translate="Common.Delete">
 			</button>
@@ -27,6 +28,52 @@
 		</div>
 	</div>
 	
-	<div id="gridFinOrders" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
-		 style="width: 100%; height: 500px;"></div>
+	<br>
+	<table st-table="orderList" st-safe-src="arFinanceOrder" class="table">
+		<thead>
+			<tr>
+				<th></th>
+				<th st-sort="id" translate="Common.ID">ID</th>
+				<th st-sort="name" translate="Common.Name">Name</th>
+				<th st-sort="validfrm" translate="Common.ValidFrom">Valid From</th>
+				<th st-sort="validto" translate="Common.ValidTo">Valid To</th>
+				<th st-sort="cmt" translate="Common.Comment">Comment</th>
+				<th translate="Common.Operations">Operations</th>
+			</tr>
+			<tr>
+				<th colspan="7"><input st-search="serch" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text"/></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="row in ccList">
+				<td cs-select="row"></td>
+				<td>{{row.ID}}</td>
+				<td>{{row.Name}}</td>
+				<td>{{row.ValidFrom | date: 'yyyy.MM.dd'}}</td>
+				<td>{{row.ValidTo | date: 'yyyy.MM.dd'}}</td>
+				<td>{{row.Comment}}</td>
+				<td>
+					<button type="button" class="btn btn-sm" ng-click="displayItem(row)" tooltip="{{'Common.Display' | translate}}">
+						<i class="glyphicon glyphicon-share">
+						</i>
+					</button>
+					<button type="button" class="btn btn-sm" ng-click="editItem(row)" tooltip="{{'Common.Edit' | translate}}">
+						<i class="glyphicon glyphicon-edit">
+						</i>
+					</button>
+					<button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger" tooltip="{{'Common.Delete' | translate}}">
+						<i class="glyphicon glyphicon-remove-circle">
+						</i>
+					</button>
+				</td>
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="6">
+					<cst-count></cst-count>
+				</td>
+			</tr>
+		</tfoot>
+	</table>
 </div>
