--- a/app/views/finance/financedocument_tran.html
+++ b/app/views/finance/financedocument_tran.html
@@ -124,7 +124,7 @@
 					translate="Common.Submit">Submit</button>
                     
                     <!--ng-disabled="frmObj.$invalid || !frmObj.$dirty"-->
-				<button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
+				<button class="btn btn-danger" ng-click="close()" translate="Common.BackToList">Cancel</button>
 			</div>
 		</div>
 	</form>
