--- a/app/views/finance/financedocument_currexg.html
+++ b/app/views/finance/financedocument_currexg.html
@@ -152,7 +152,7 @@
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"                
 					translate="Common.Submit">Submit</button>
                     <!--ng-disabled="frmObj.$invalid || !frmObj.$dirty"-->
-				<button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
+				<button class="btn btn-danger" ng-click="close()" translate="Common.BackToList">Cancel</button>
 			</div>
 		</div>
 	</form>
