--- a/app/views/finance/financedocumentlist.html
+++ b/app/views/finance/financedocumentlist.html
@@ -19,19 +19,20 @@
  					</ul>
                 </div>
 			</div>
-			<button type="button" class="btn-group btn-primary" ng-click="refreshList()" translate="Common.Refresh">Refresh</button>
+			<button type="button" class="btn-group btn-primary" tooltip="{{'Common.Refresh' | translate}}"
+				ng-click="refreshList()" translate="Common.Refresh">Refresh</button>
 		  </div>
 		  
 		  <div class="btn-group" role="group" aria-label="">
-  			<button type="button" ng-click="displayItem()" ng-disabled="selectedRows.length <= 0"
+  			<button type="button" ng-click="displayItem()"
 					class="btn-group btn-primary" tooltip="{{'Common.Display' | translate}}"
 					translate="Common.Display">					
 			</button>
-			<button type="button" ng-click="editItem()" ng-disabled="selectedRows.length <= 0"
+			<button type="button" ng-click="editItem()"
 					class="btn-group btn-warning" tooltip="{{'Common.Edit' | translate}}"
 					translate="Common.Edit">
 			</button>
-			<button type="button" ng-click="removeItem()" ng-disabled="selectedRows.length <= 0"
+			<button type="button" ng-click="removeItem()"
 					class="btn-group btn-danger" tooltip="{{'Common.Delete' | translate}}"
 					translate="Common.Delete">
 			</button>
@@ -39,6 +40,56 @@
 		</div>
 	</div>
 
-	<div id="gridFinDocs" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
-		 style="width: 100%; height: 500px;"></div>
+	<table st-table="docCollection" st-safe-src="arFinanceDocument" class="table table-striped table-hover">
+		<thead>
+			<tr>
+				<th></th>
+				<th st-sort="docid" translate="Common.ID">ID</th>
+				<th st-sort="doctypename" translate="Finance.DocumentType">Doc Type</th>
+				<th st-sort="trandate" translate="Common.Date">Tran Data</th>
+				<th st-sort="trancurrname" translate="Common.Precent">Currency</th>
+				<th st-sort="tranamount" translate="Finance.Amount">Amount</th>
+				<th st-sort="desp" translate="Common.Comment">Comment</th>
+				<th translate="Common.Operations">Operations</th>
+			</tr>
+			<tr>
+				<th colspan="8"><input st-search="serch" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text"/></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="row in docCollection">
+				<td cs-select="row"></td>
+				<td>{{row.DocID}}</td>
+				<td>{{row.DocTypeObject.Name}}</td>
+				<td>{{row.TranDate | date:'yyyy.MM.dd'}}</td>
+				<td>{{row.TranCurrencyObject.Name}}</td>
+				<td>{{row.TranAmount | currency: '￥'}}</td>
+				<td>{{row.Desp}}</td>
+				<td>
+					<button type="button" class="btn btn-sm" ng-click="displayItem(row)" tooltip="{{'Common.Display' | translate}}">
+						<i class="glyphicon glyphicon-share">
+						</i>
+					</button>
+					<button type="button" class="btn btn-sm" ng-click="editItem(row)" tooltip="{{'Common.Edit' | translate}}">
+						<i class="glyphicon glyphicon-edit">
+						</i>
+					</button>
+					<button type="button" class="btn btn-sm btn-danger" ng-click="removeItem(row)" tooltip="{{'Common.Delete' | translate}}">
+						<i class="glyphicon glyphicon-remove-circle">
+						</i>
+					</button>
+				</td>
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="5">
+					<cst-count></cst-count>
+				</td>
+				<td colspan="3">
+					<cst-sum columnname="TranAmount"></cst-sum>
+				</td>
+			</tr>
+		</tfoot>
+	</table>
 </div>
