--- a/app/views/finance/financeorder.html
+++ b/app/views/finance/financeorder.html
@@ -16,14 +16,14 @@
     <div class="form-group">
     	<div class="col-sm-10">
         	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
-            		ng-disabled="frmObj.$invalid || !frmObj.$dirty">Submit</button>
-            <button class="btn btn-danger" ng-click="close()">Cancel</button>
+            		translate="Common.Submit">Submit</button>
+            <button class="btn btn-danger" ng-click="close()" translate="Common.BackToList">Cancel</button>
         </div>
     </div>
 
     <ul class="nav nav-tabs">
-        <li role="presentation" ng-class="showhdr ? 'active' : ''"><a role="button" ng-click="showhdr = true">Header</a></li>
-        <li role="presentation" ng-class="showhdr ? '' : 'active'"><a role="button" ng-click="showhdr = false">Rules</a></li>
+        <li role="presentation" ng-class="showhdr ? 'active' : ''"><a role="button" ng-click="showhdr = true"><span translate="Finance.OrderHeader">Header</span></a></li>
+        <li role="presentation" ng-class="showhdr ? '' : 'active'"><a role="button" ng-click="showhdr = false"><span translate="Finance.Rules">Rules</span></a></li>
     </ul>
 
     <!-- Header -->
@@ -47,6 +47,7 @@
 
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Common.ValidFrom">Valid from</label>
+                 <div class="col-sm-10">
                 <div class="input-group">
                     <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidFrom" is-open="isValidfromDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
@@ -54,10 +55,12 @@
                         <button type="button" class="btn btn-default" ng-click="openValidfromDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
                 </div>
+                 </div>
             </div>
             
             <div class="form-group">
                 <label class="control-label col-sm-2" translate="Common.ValidTo">Valid to</label>
+                 <div class="col-sm-10">
                 <div class="input-group">
                     <input type="text" class="form-control" datepicker-popup="{{DateFormat}}" ng-model="OrderObject.ValidTo" is-open="isValidtoDateOpened"
                            datepicker-options="dateOptions" ng-required="true" ng-readonly="isReadonly" close-text="Close" />
@@ -65,12 +68,13 @@
                         <button type="button" class="btn btn-default" ng-click="openValidtoDate($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
                 </div>
+                 </div>
             </div>
 
             <div class="form-group">
                 <label class="control-label col-sm-2" for="iptComment" translate="Common.Comment">Comment</label>
                 <div class="col-sm-10">
-                    <textarea id="iptComment" rows="5" columns="50" ng-readonly="isReadonly" ng-model="OrderObject.Comment"></textarea>
+                    <input id="iptComment" class="form-control" ng-readonly="isReadonly" ng-model="OrderObject.Comment" />
                 </div>
             </div>
         </form>
@@ -78,7 +82,7 @@
 
     <!-- Rules -->
     <div class="container" ng-show="!showhdr">
-        <table st-table="RuleObjects" class="table">
+        <table st-table="displayedCollection" st-safe-src="RuleObjects" class="table table-striped table-hover">
             <thead>
                 <tr>
                     <th st-sort="ruleid" translate="Finance.ItemID">ID</th>
@@ -97,7 +101,7 @@
                     <td>{{row.RuleID}}</td>
                     <td>{{row.ControlCenterID}}</td>
                     <td>{{row.ControlCenterObject.Name}}</td>
-                    <td>{{row.Precentage}}</td>
+                    <td>{{row.Precentage | number}}</td>
                     <td>{{row.Comment}}</td>
                     <td>
                         <button type="button" class="btn btn-sm" ng-click="displayItem(row)" tooltip="{{'Common.Display' | translate}}">
@@ -108,7 +112,7 @@
                             <i class="glyphicon glyphicon-edit">
                             </i>
                         </button>
-                        <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger" tooltip="{{'Common.Delete' | translate}}">
+                        <button type="button" class="btn btn-sm btn-danger" ng-click="removeItem(row)" tooltip="{{'Common.Delete' | translate}}">
                             <i class="glyphicon glyphicon-remove-circle">
                             </i>
                         </button>
@@ -142,30 +146,25 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" translate="Finance.ControlCenter">Control Center:</label>
                     <div class="col-sm-10">
-                        <ui-select ng-model="SelectedRuleObject.ControlCenterObject.selected" theme="select2" search-enabled="true" ng-disabled="isReadonly" style="min-width: 300px;">
-                            <ui-select-match placeholder="Select a control center via the name...">{{$select.selected.Name}}</ui-select-match>
-                            <ui-select-choices repeat="cc in AllCostCenters">
-                                <div ng-bind-html="cc.Name | highlight: $select.search"></div>
-                                <small>
-                                    ID: {{cc.ID}} <br />
-                                    Name: <span ng-bind-html="''+cc.Name | highlight: $select.search"></span>
-                                </small>
-                            </ui-select-choices>
-                        </ui-select>
+                        <selectize  
+		  		      		options='AllCostCenter' 
+                            config="ccConfig" ng-model="SelectedRuleObject.ControlCenterID"
+                            ng-disabled="isReadonly"></selectize>
                     </div>
                 </div>
                 
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="iptPcnt">Precentage:</label>
+                    <label class="control-label col-sm-2" for="iptPcnt" translate="Common.Precent">Precentage:</label>
                     <div class="col-sm-10">
-                        <input type="number" id="iptPcnt" min="0" max="100" string-to-number ng-readonly="isReadonly" ng-model="SelectedRuleObject.Precentage" required></input>
+                        <input type="number" id="iptPcnt" min="0.0" max="100.0" string-to-float ng-readonly="isReadonly" 
+                            ng-model="SelectedRuleObject.Precentage" required></input>
                     </div>
                 </div>
                 
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="iptRuleComment">Comment: </label>
                     <div class="col-sm-10">
-                        <input id="iptRuleComment" ng-readonly="isReadonly"
+                        <input id="iptRuleComment" ng-readonly="isReadonly" class="form-control" 
                                ng-model="SelectedRuleObject.Comment"></input>
 			        </div>
 		        </div>
@@ -174,8 +173,8 @@
                 <div class="form-group">
                 	<div class="col-sm-10">
                     	<button class="btn btn-default btn-primary" ng-click="saveCurrentItem()" ng-hide="isReadonly"
-                        		ng-disabled="frmItem.$invalid || !frmItem.$dirty">Save Item</button>
-                        <button class="btn btn-danger" ng-click="cancelCurrentItem()" ng-hide="isReadonly">Cancel Item Editing</button>
+                        		ng-disabled="frmItem.$invalid || !frmItem.$dirty" translate="Finance.SaveCurrentRule">Save Item</button>
+                        <button class="btn btn-danger" ng-click="cancelCurrentItem()" ng-hide="isReadonly" translate="Finance.CancelRuleEditing">Cancel Item Editing</button>
                     </div>
                 </div>
             </form>
