--- a/app/views/finance/financeorderlist.html
+++ b/app/views/finance/financeorderlist.html
@@ -29,7 +29,7 @@
 	</div>
 	
 	<br>
-	<table st-table="orderList" st-safe-src="arFinanceOrder" class="table">
+	<table st-table="orderList" st-safe-src="arFinanceOrder" class="table table-striped table-hover">
 		<thead>
 			<tr>
 				<th></th>
@@ -45,7 +45,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="row in ccList">
+			<tr ng-repeat="row in orderList">
 				<td cs-select="row"></td>
 				<td>{{row.ID}}</td>
 				<td>{{row.Name}}</td>
@@ -70,7 +70,7 @@
 		</tbody>
 		<tfoot>
 			<tr>
-				<td colspan="6">
+				<td colspan="7">
 					<cst-count></cst-count>
 				</td>
 			</tr>
