--- a/app/views/finance/financereportbs.html
+++ b/app/views/finance/financereportbs.html
@@ -8,36 +8,69 @@
 	<div>Currency: <span class="label label-default">{{ReportCurrency}}</span></div>
 	<br>
 	
-	<div id="gridFinReportBS" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
-		 style="width: 100%; height: 500px;"></div>
+	<table st-table="rptCollection" st-safe-src="dataReport" class="table table-striped table-hover">
+		<thead>
+			<tr>
+				<th st-sort="acname" translate="Finance.Account">Account</th>
+				<th st-sort="amtIn" translate="Finance.Incoming">Incoming</th>
+				<th st-sort="amtOut" translate="Finance.Outgoing">Outgoing</th>
+				<th st-sort="bal" translate="Finance.Balance">Balance</th>
+			</tr>
+			<tr>
+				<th colspan="4"><input st-search="serch" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text"/></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="row in rptCollection">
+				<td>{{row.AccountObject.Name}}</td>
+				<td>{{row.DebitBalance | currency: '￥'}}</td>
+				<td>{{row.CreditBalance | currency: '￥'}}</td>
+				<td>{{row.Balance | currency: '￥'}}</td>
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="1">
+					<cst-count></cst-count>
+				</td>
+				<td colspan="1">
+					<cst-sum columnname="DebitBalance"></cst-sum>
+				</td>
+				<td colspan="1">
+					<cst-sum columnname="CreditBalance"></cst-sum>
+				</td>
+				<td colspan="1">
+					<cst-sum columnname="Balance"></cst-sum>
+				</td>
+			</tr>
+		</tfoot>
+	</table>
 		 
 	<br>
+	<div class="col-xs-12 col-sm-12 col-md-12">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title" translate="Finance.Incoming">Incoming</h3>
+			</div>
+			<div class="panel-body">
+				<canvas id="polar-area-inc" class="chart chart-polar-area"
+						chart-data="dataIncoming" chart-labels="labelsIncoming">
+				</canvas> 
+			</div>
+		</div>			  
+	</div>
+	
 	<br>
-	<div class="row">
-  		<div class="col-xs-12 col-sm-12 col-md-6">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title" translate="Finance.Incoming">Incoming</h3>
-				</div>
-				<div class="panel-body">
-					<canvas id="polar-area-inc" class="chart chart-polar-area"
-							chart-data="dataIncoming" chart-labels="labelsIncoming">
-					</canvas> 
-				</div>
-			</div>			  
-		</div>
-		
-  		<div class="col-xs-12 col-sm-12 col-md-6">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title" translate="Finance.Outgoing">Outgoing</h3>
-				</div>
-				<div class="panel-body">
-					<canvas id="polar-area-out" class="chart chart-polar-area"
-							chart-data="dataOutgoing" chart-labels="labelsOutgoing">
-					</canvas> 
-				</div>
-			</div>			  
-		</div>
+	<div class="col-xs-12 col-sm-12 col-md-12">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title" translate="Finance.Outgoing">Outgoing</h3>
+			</div>
+			<div class="panel-body">
+				<canvas id="polar-area-out" class="chart chart-polar-area"
+						chart-data="dataOutgoing" chart-labels="labelsOutgoing">
+				</canvas> 
+			</div>
+		</div>			  
 	</div>
 </div>
