--- a/app/views/learn/learnawardlist.html
+++ b/app/views/learn/learnawardlist.html
@@ -6,20 +6,22 @@
 		
 		<div class="btn-toolbar" role="toolbar" aria-label="...">
 		  <div class="btn-group" role="group" aria-label="...">
-			<button type="button" class="btn-group btn-primary" ng-click="newItem()" translate="Common.New">New</button>
-			<button type="button" class="btn-group btn-primary" ng-click="refreshList()" translate="Common.Refresh">Refresh</button>
+			<button type="button" class="btn-group btn-primary" tooltip="{{'Common.New' | translate}}" 
+				ng-click="newItem()" translate="Common.New">New</button>
+			<button type="button" class="btn-group btn-primary" tooltip="{{'Common.Refresh' | translate}}"
+				ng-click="refreshList()" translate="Common.Refresh">Refresh</button>
 		  </div>
 		  
 		  <div class="btn-group" role="group" aria-label="...">
-  			<button type="button" ng-click="displayItem()" ng-disabled="selectedRows.length <= 0"
+  			<button type="button" ng-click="displayItem()"
 					class="btn-group btn-primary" tooltip="{{'Common.Display' | translate}}"
 					translate="Common.Display">					
 			</button>
-			<button type="button" ng-click="editItem()" ng-disabled="selectedRows.length <= 0"
+			<button type="button" ng-click="editItem()"
 					class="btn-group btn-warning" tooltip="{{'Common.Edit' | translate}}"
 					translate="Common.Edit">
 			</button>
-			<button type="button" ng-click="removeItem()" ng-disabled="selectedRows.length <= 0"
+			<button type="button" ng-click="removeItem()"
 					class="btn-group btn-danger" tooltip="{{'Common.Delete' | translate}}"
 					translate="Common.Delete">
 			</button>
@@ -27,6 +29,56 @@
 		</div>
 	</div>
 
-	<div id="grid1" ui-grid="gridOptions" ui-grid-selection ui-grid-resize-columns
-		 style="width: 100%; height: 500px;"></div>
+	<table st-table="dispList" st-safe-src="arLearnAward" class="table table-striped table-hover">
+		<thead>
+			<tr>
+				<th></th>
+				<th st-sort="id" translate="Common.ID">ID</th>
+				<th st-sort="userid" translate="Login.User">User</th>
+				<th st-sort="dispas" translate="Login.DisplayAs">Display As</th>
+				<th st-sort="adate" translate="Common.Date">Date</th>
+				<th st-sort="score" translate="Learn.Score">Score</th>
+				<th st-sort="reason" translate="Learn.Reason">Reason</th>
+				<th translate="Common.Operations">Operations</th>
+			</tr>
+			<tr>
+				<th colspan="8"><input st-search="serch" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text"/></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="row in dispList">
+				<td cs-select="row"></td>
+				<td>{{row.ID}}</td>
+				<td>{{row.UserID}}</td>
+				<td>{{row.UserDisplayAs}}</td>
+				<td>{{row.AwardDate | date: 'yyyy.MM.dd'}}</td>
+				<td>{{row.Score | number}}</td>
+				<td>{{row.Reason | limitTo: 20}}</td>
+				<td>
+					<button type="button" class="btn btn-sm" ng-click="displayItem(row)" tooltip="{{'Common.Display' | translate}}">
+						<i class="glyphicon glyphicon-share">
+						</i>
+					</button>
+					<button type="button" class="btn btn-sm" ng-click="editItem(row)" tooltip="{{'Common.Edit' | translate}}">
+						<i class="glyphicon glyphicon-edit">
+						</i>
+					</button>
+					<button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger" tooltip="{{'Common.Delete' | translate}}">
+						<i class="glyphicon glyphicon-remove-circle">
+						</i>
+					</button>
+				</td>
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="5">
+					<cst-count></cst-count>
+				</td>
+				<td colspan="3">
+					<cst-sum columnname="Score"></cst-sum>
+				</td>
+			</tr>
+		</tfoot>
+	</table>
 </div>
