--- a/app/views/learn/learncategorylist.html
+++ b/app/views/learn/learncategorylist.html
@@ -6,6 +6,34 @@
 		</h2>
 	</div>
 
-	<div id="gridLrnCtgy" ui-grid="gridOptions" ui-grid-resize-columns
-		 style="width: 100%; height: 500px;"></div>
+	<table st-table="dispList" st-safe-src="arLearnCategory" class="table table-striped table-hover">
+		<thead>
+			<tr>
+				<th st-sort="id" translate="Common.ID">ID</th>
+				<th st-sort="parent" translate="Common.Parent">Parent</th>
+				<th st-sort="text" translate="Common.Text">Text</th>
+				<th st-sort="fulltext" translate="Common.Text">Text</th>
+				<th st-sort="comment" translate="Common.Comment">Comment</th>
+			</tr>
+			<tr>
+				<th colspan="5"><input st-search="serch" class="form-control" placeholder="{{ 'Common.Search' | translate }}" type="text"/></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="row in dispList">
+				<td>{{row.ID}}</td>
+				<td>{{row.ParentID}}</td>
+				<td>{{row.Text}}</td>
+				<td>{{row.FullDisplayText}}</td>
+				<td>{{row.Comment}}</td>
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="5">
+					<cst-count></cst-count>
+				</td>
+			</tr>
+		</tfoot>
+	</table>
 </div>
