Continues the development.

--- a/app/views/finance/financereportcc.html
+++ b/app/views/finance/financereportcc.html
@@ -34,7 +34,7 @@
 		
 		<div class="form-group">
 			<div class="col-sm-10">
-				<button class="btn btn-default btn-primary" ng-click="submit()"
+				<button class="btn btn-default btn-primary" ng-click="submit()" translate="Common.Submit"
 						ng-disabled="frmObj.$invalid || !frmObj.$dirty">Submit</button>
 			</div>
 		</div>
