--- a/app/views/learn/learnplan.html
+++ b/app/views/learn/learnplan.html
@@ -307,8 +307,8 @@
     <!-- Buttons -->
     <div class="form-group">
     	<div class="col-sm-12 col-md-12 col-lg-12">
-        	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly">Submit</button>
-            <button class="btn btn-danger" ng-click="close()">Cancel</button>
+        	<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly" translate="Common.Submit">Submit</button>
+            <button class="btn btn-danger" ng-click="close()" translate="Common.BackToList">Cancel</button>
         </div>
     </div>	
 </div>
