--- a/app/views/learn/learnhistory.html
+++ b/app/views/learn/learnhistory.html
@@ -49,7 +49,7 @@
 			<div class="col-sm-offset-2 col-sm-10">
 				<button class="btn btn-default btn-primary" ng-click="submit()" ng-hide="isReadonly"
 						translate="Common.Submit">Submit</button>
-				<button class="btn btn-danger" ng-click="close()" translate="Common.Cancel">Cancel</button>
+				<button class="btn btn-danger" ng-click="close()" translate="Common.BackToList">Cancel</button>
 			</div>
 		</div>		
 	</form>
