Continues the development.

--- a/app/views/finance/financedocumentlist.html
+++ b/app/views/finance/financedocumentlist.html
@@ -83,10 +83,12 @@
 		</tbody>
 		<tfoot>
 			<tr>
-				<td colspan="5">
+				<td colspan="2" class="text-center">
 					<cst-count></cst-count>
 				</td>
-				<td colspan="3">
+				<td colspan="3" class="text-center" st-pagination="" st-items-by-page="20">
+				</td>
+				<td colspan="3" class="text-center">
 					<cst-sum columnname="TranAmount"></cst-sum>
 				</td>
 			</tr>
