--- a/app/views/learn/learnawardlist.html
+++ b/app/views/learn/learnawardlist.html
@@ -72,11 +72,13 @@
 		</tbody>
 		<tfoot>
 			<tr>
-				<td colspan="5">
+				<td colspan="3" class="text-center" st-pagination="" st-items-by-page="20">
+				</td>
+				<td colspan="2" class="text-center">
 					<cst-count></cst-count>
 				</td>
-				<td colspan="3">
-					<cst-sum columnname="Score"></cst-sum>
+				<td colspan="3" class="text-center">
+					<cst-sum columnname="Score" ></cst-sum>
 				</td>
 			</tr>
 		</tfoot>
