--- a/app/views/finance/financeaccountlist.html
+++ b/app/views/finance/financeaccountlist.html
@@ -73,8 +73,10 @@
 		</tbody>
 		<tfoot>
 			<tr>
-				<td colspan="7">
+				<td colspan="2" class="text-center">
 					<cst-count></cst-count>
+				</td>
+				<td colspan="5" class="text-center" st-pagination="" st-items-by-page="20">
 				</td>
 			</tr>
 		</tfoot>
