--- a/app/views/finance/financecclist.html
+++ b/app/views/finance/financecclist.html
@@ -69,8 +69,10 @@
 		</tbody>
 		<tfoot>
 			<tr>
-				<td colspan="6">
+				<td colspan="2" class="text-center">
 					<cst-count></cst-count>
+				</td>
+				<td colspan="4" class="text-center" st-pagination="" st-items-by-page="20">
 				</td>
 			</tr>
 		</tfoot>
