--- a/app/views/learn/learncategorylist.html
+++ b/app/views/learn/learncategorylist.html
@@ -30,8 +30,10 @@
 		</tbody>
 		<tfoot>
 			<tr>
-				<td colspan="5">
+				<td colspan="2" class="text-center">
 					<cst-count></cst-count>
+				</td>
+				<td colspan="3" class="text-center" st-pagination="" st-items-by-page="20">
 				</td>
 			</tr>
 		</tfoot>
