--- a/app/views/learn/learnhistorylist.html
+++ b/app/views/learn/learnhistorylist.html
@@ -72,8 +72,10 @@
 		</tbody>
 		<tfoot>
 			<tr>
-				<td colspan="7">
+				<td colspan="3" class="text-center">
 					<cst-count></cst-count>
+				</td>
+				<td colspan="4" class="text-center" st-pagination="" st-items-by-page="20">
 				</td>
 			</tr>
 		</tfoot>
