Commit work from Code.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -34,7 +34,7 @@
             jQuery</a>
           <a target="_blank" href="http://www.jstree.com/" class="list-group-item"><span class="badge">3.1.1</span>jsTree</a>
 					<a target="_blank" href="http://t4t5.github.io/sweetalert/" class="list-group-item"><span class="badge">1.0.1</span>Sweet Alert</a>
-					<a target="_blank" href="https://github.com/ezraroi/ngJsTree" class="list-group-item">ngJsTree</a>
+					<a target="_blank" href="https://github.com/ezraroi/ngJsTree" class="list-group-item"><span class="badge">0.0.7</span>ngJsTree</a>
 					<a target="_blank" href="https://github.com/thomaspark/bootswatch/" class="list-group-item">bootswatch</a>
 					<a target="_blank" href="https://angular-translate.github.io/" class="list-group-item"><span class="badge">2.7.2</span>Angular Translate</a>
 					<a target="_blank" href="http://www.chartjs.org/" class="list-group-item"><span class="badge">1.0.2</span>Chart.js</a>
@@ -53,8 +53,7 @@
 					<a target="_blank" href="https://github.com/lorenzofox3/Smart-Table" class="list-group-item"><span class="badge">2.1.4</span>Smart-Table</a>
 					<a target="_blank" href="http://cdn.code.baidu.com/" class="list-group-item">Baidu CDN</a>
         </ul>
-    </div>
-  
+    </div>  
     
   <!--<div style="height: 605px">
     <carousel interval="myInterval">
