--- a/app/views/home.html
+++ b/app/views/home.html
@@ -135,19 +135,13 @@
 	                            <li><a ui-sref="home.finance.accountcategory.list"><span translate="Finance.AccountCategory">Account Category</span></a></li>
 								<li><a ui-sref="home.finance.documenttype.list"><span translate="Finance.DocumentType">Document Type</span></a></li>
 								<li role="separator" class="divider"></li>
-								<li class="dropdown-header"><span translate="Finance.TransactionType">Transaction Type</span></li>
-	                            <li><a ui-sref="home.finance.transactiontype.list"><span translate="Common.ListView">List View</span></a></li>
-								<li><a ui-sref="home.finance.transactiontype.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
-								<li role="separator" class="divider"></li>
-								<li class="dropdown-header"><span translate="Finance.Accounts">Finance Accounts</span></li>
-	                            <li><a ui-sref="home.finance.account.list"><span translate="Common.ListView">List View</span></a></li>
-								<li><a ui-sref="home.finance.account.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
-								<li role="separator" class="divider"></li>
-								<li class="dropdown-header"><span translate="Finance.ControlCenter">Control Center</span></li>
-	                            <li><a ui-sref="home.finance.controlcenter.list"><span translate="Common.ListView">List View</span></a></li>
-								<li><a ui-sref="home.finance.controlcenter.hierarchy"><span translate="Common.HierarchyView">Hierarchy View</span></a></li>
-								<li role="separator" class="divider"></li>
-	                            <li><a ui-sref="home.finance.order.list"><span translate="Finance.Order">Orders</span></a></li>
+	                            <li><a ui-sref="home.finance.transactiontype.list"><span translate="Finance.TransactionType"></span> - <span translate="Common.ListView">List View</span></a></li>
+								<li><a ui-sref="home.finance.transactiontype.hierarchy"><span translate="Finance.TransactionType"></span> - <span translate="Common.HierarchyView">Hierarchy View</span></a></li>
+	                            <li><a ui-sref="home.finance.account.list"><span translate="Finance.Accounts"></span> - <span translate="Common.ListView">List View</span></a></li>
+								<li><a ui-sref="home.finance.account.hierarchy"><span translate="Finance.Accounts"></span> - <span translate="Common.HierarchyView">Hierarchy View</span></a></li>
+	                            <li><a ui-sref="home.finance.controlcenter.list"><span translate="Finance.ControlCenter">Control Center</span> - <span translate="Common.ListView">List View</span></a></li>
+								<li><a ui-sref="home.finance.controlcenter.hierarchy"><span translate="Finance.ControlCenter">Control Center</span> - <span translate="Common.HierarchyView">Hierarchy View</span></a></li>
+	                            <li><a ui-sref="home.finance.order.list"><span translate="Finance.Order">Orders</span> - <span translate="Common.ListView">List View</span></a></li>
 								<li role="separator" class="divider"></li>
 								<li class="dropdown-header"><span translate="Finance.Documents">Finance Documents</span></li>
 	                            <li><a ui-sref="home.finance.document.list"><span translate="Common.ListView">List View</span></a></li>
